@@ -1,3 +1,8 @@
+2010-06-29 Noel O'Boyle
+
+	* src/formats/xml/cmlformat.cpp: Partial fix for chiral N problems.
+	See PR#3022295.
+
 2010-0628 Chris Morley
 
 	* include/openbabel/depict/depict.h, src/depict/depict.cpp:
